# xLSTM-Metal

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AUTHORS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  FINAL_IMPLEMENTATION_REPORT.md  HANDOFF_NOTES.md  IMPLEMENTATION_SUMMARY.md  INCOMPLETE_WORK.md  Implementation_Fidelity_Analysis.md  MLX_Metal_Kernel_Guide.md  Metal_Kernel_Guide.md  NOTICE  README.md  check_weights.py  compare_params.py  convert_hf_to_mlx.py  debug_dims.py  debug_mps_memory.py  debug_storage_api.py  download_model.py  download_pretrained.py  fix_exceptions.py  nuke_exceptions.py  prompt_16k.txt  pyproject.toml  pytorch_metal_kernels.py  remove_all_fallbacks.py  requirements.txt  run_xlstm.py  show_configs.py  strip_fallbacks.py  test_api_compatibility.py  test_apple_xlstm.py  test_implementations.py  test_mlx_params.py  test_model_simple.py  test_multiprocessing_memory.py  (+25 more)
xlstm-solace-mlx/: README.md  pyproject.toml
xlstm-solace-mlx/src/tools/: test_safetensors_roundtrip.py
xlstm-solace-mlx/src/xlstm_solace_mlx/: api.py  cli.py  inference.py  model.py
xlstm-solace-mlx/src/xlstm_solace_mlx/components/: mh_layernorm.py  util.py
xlstm-solace-mlx/src/xlstm_solace_mlx/components/mlstm/: block.py
xlstm-solace-mlx/src/xlstm_solace_mlx/components/slstm/: block.py
xlstm-solace-mlx/src/xlstm_solace_mlx/configs/: default_metal.json  mlx_golden.json  xlstm_7b_metal.json
xlstm-solace-mlx/src/xlstm_solace_mlx/kernels/: README.md  __init__.py  gemm_kernels.py  ivf_kernels.py  qr_kernels.py  shaders.py  svd_kernels.py
xlstm-solace-mlx/src/xlstm_solace_mlx/tools/: mlx_runtime.py
xlstm-solace-torch/: README.md  pyproject.toml
xlstm-solace-torch/src/xlstm_solace_torch/: __init__.py  api.py  apple_compat.py  config_loader.py  inference.py  inference_api.py  kernel_validation.py
xlstm-solace-torch/src/xlstm_solace_torch/configs/: __init__.py  default_metal.json  golden_queued.json  golden_ray.json  xlstm_7b_metal.json
xlstm-solace-torch/src/xlstm_solace_torch/kernels/: __init__.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/: __init__.py  backend_module.py  kernel_wrappers.py  registry.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/chunkwise/: __init__.py  mps_streaming.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/chunkwise/distributed_compiled/: __init__.py  driver.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/chunkwise/metal/: fw.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/chunkwise/multiprocessing_metal/: __init__.py  driver.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/experiments/: __init__.py  cfc_head_experiment.py  dcc_biological_experiment.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/metal/: __init__.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/monitoring/: __init__.py  distributed_metrics.py  memory.py  ray_metrics.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/parallel/: __init__.py
xlstm-solace-torch/src/xlstm_solace_torch/kernels/torch/recurrent/: __init__.py
xlstm-solace-torch/src/xlstm_solace_torch/models/: __init__.py  model.py
xlstm-solace-torch/src/xlstm_solace_torch/models/mlstm/: __init__.py  backends.py  cell.py  layer.py
xlstm-solace-torch/src/xlstm_solace_torch/models/slstm/: README.md  __init__.py
xlstm-solace-torch/src/xlstm_solace_torch/xlstm_large/: __init__.py
xlstm-solace-torch/src/xlstm_solace_torch/xlstm_solace_large/: __init__.py  config.py  model.py
(+440 files in other folders)
